plugins {
  id 'maven-publish'
}

group "com.kodality.kefhir"

allprojects {
  apply plugin: "java-library"

  version rootProject.version
  group rootProject.group

  configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
  }

  sourceCompatibility = 17
  targetCompatibility = 17

  repositories {
    mavenCentral()
    maven { url "https://kexus.kodality.com/repository/maven-public/" }
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" } // used for hapi snapshots
  }

  dependencies {
    annotationProcessor "org.projectlombok:lombok:1.18.24"
    compileOnly "org.projectlombok:lombok:1.18.24"

    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
    annotationProcessor "io.micronaut:micronaut-inject-java"

    api platform("io.micronaut:micronaut-bom:$micronautVersion")
    api "io.micronaut:micronaut-inject"
    api "io.micronaut:micronaut-runtime"
    api "javax.inject:javax.inject:1"
    api 'org.glassfish.hk2.external:jakarta.inject:2.6.1'

    api "org.apache.commons:commons-collections4:4.4"
    api "org.apache.commons:commons-lang3:3.12.0"
    api "commons-io:commons-io:2.11.0"
  }
}

subprojects { Project project ->
  apply plugin: "maven-publish"

  java {
    withSourcesJar()
  }

  publishing {
    publications {
      mavenJava(MavenPublication) {
        artifactId = project.name
        from components.java
      }
    }
    repositories {
      maven {
        def releasesRepoUrl = "https://kexus.kodality.com/repository/maven-releases/"
        def snapshotsRepoUrl = "https://kexus.kodality.com/repository/maven-snapshots/"
        url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
        credentials {
          username = project.hasProperty('kodalityNexusUser') ? project.property('kodalityNexusUser') : System.getenv('KODALITY_NEXUS_USER')
          password = project.hasProperty('kodalityNexusPassword') ? project.property('kodalityNexusPassword') : System.getenv('KODALITY_NEXUS_PASSWORD')
        }
      }
    }
  }

}
